# mql-lpclient-latest

./: CMakeLists.txt  README.md  build-lnx.sh  toolchain-lnx-mingw32.cmake
Experts/: lpclient_test.mq4
Include/LPClient/: LPC.mqh
lpc/: lpclient.cpp  lpclient.hpp  lpclient_test.cpp  zmq.hpp
lpc/lpclient/: hwtypes.hpp  lpc.hpp  lpcapi.hpp  zhelpers.hpp
